'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'버전 업데이트

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 mybatis.mapper-locations=classpath:mapper/**/*.xml
 mybatis.type-aliases-package=com.example.forfafa.domain.user.model
 mybatis.type-handlers-package=com.example.forfafa.global.mybatis
+
+spring.profiles.include=secret
